Handel Cart and Add Footer

--- a/src/app/Component/footer/footer.component.html
+++ b/src/app/Component/footer/footer.component.html
@@ -1,5 +1,15 @@
 <footer class="footer">
-    <div class="container">
+    <div class="row mt-5">
+        <div class="col-md-12 text-center">
+          <p class="copyright"> Copyright &copy;All rights reserved</p>
+          <ul class="ftco-footer-social p-0">
+            <li class="ftco-animate"><a href="#" data-placement="top" title="Twitter"><i class="bi bi-twitter-x"></i></a></li>
+            <li class="ftco-animate"><a href="#" data-placement="top" title="Facebook"><i class="bi bi-facebook"></i></a></li>
+            <li class="ftco-animate"><a href="#" data-placement="top" title="Instagram"><i class="bi bi-instagram"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    <!-- <div class="container">
       <div class="row">
         <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
           <h2 class="footer-heading">Shoping</h2>
@@ -47,5 +57,5 @@
           </ul>
         </div>
       </div>
-    </div>
+    </div> -->
   </footer>
