--- a/src/app/Component/add-product/add-product.component.css
+++ b/src/app/Component/add-product/add-product.component.css
@@ -4,3 +4,38 @@ input[type="text"].ng-invalid.ng-touched
  {
     border: 1px solid red;
 }
+.color-circles {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 10px;
+}
+
+.color-circle {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+.remove-icon {
+  position: relative;
+  top: -3px;
+  left: -3px;
+  display: none;
+  color: white;
+  font-size: 14px;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 20px;
+  z-index: 1;
+}
+
+.color-circle:hover .remove-icon {
+  display: block;
+}
