--- a/src/app/Component/product-details/product-details.component.css
+++ b/src/app/Component/product-details/product-details.component.css
@@ -29,7 +29,7 @@
 
 .Category {
   font-size: 1.2rem;
-  color: #666;
+  color: #198754;
 }
 
 .Price {
@@ -82,7 +82,7 @@
 }
 .controls{
   display: flex;
-  justify-content: space-around; 
+  justify-content: space-around;
   font-size: 15px;
   width: 100px;
 
@@ -92,7 +92,10 @@
   padding: 0.5rem 1rem;
   font-size: 1rem;
 }
-
+b, strong {
+  font-weight: bolder;
+  margin-right: 9px;
+}
 .error-message {
   margin-top: 1rem;
   color: red;
