buy now button in product detials

--- a/src/app/Component/contact-us/contact-us.component.html
+++ b/src/app/Component/contact-us/contact-us.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2 class="contact">Contact Us</h2>
+    <h2 class="contact">{{ 'Contact.Contact' | translate }}</h2>
     <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" class="contact-form">
       <div class="form-group">
         <label for="name">Name:</label>
