--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <div class="container-fluid">
     <div class="row">
          <div class="col-md-12  mt-5 ">
+            <!-- <h3>{{ 'Contact.Contact' | translate }}</h3> -->
              <router-outlet></router-outlet>
          </div>
     </div>
