--- a/src/app/Component/Cart/cart/cart.component.html
+++ b/src/app/Component/Cart/cart/cart.component.html
@@ -2,14 +2,14 @@
     <div class="container d-flex justify-content-center align-items-center" >
         <div class="card ">
             <h5 class="card-title">Shop Cart</h5>
-            <p class="card-price">Total Price : EGP {{ getTotalPrice() }}</p>
+            <p class="card-price">Total Price : {{ getTotalPrice() | currency:'EGP':'symbol' }} </p>
             <button class="btn btn-danger clear"  (click)="Clear()">Clear Cart</button>
         <div class="mt-4 card-item " *ngFor="let item of cartProducts; let i = index">
             <div class=" card_img"><img [src]="getImageUrl(item.product.image)" [alt]="item.product.title"></div>
             
              <div class="card-text">
                 <h4>{{item.product.title}}</h4>
-                <p>{{item.product.price}}</p>
+                <p>{{item.product.price | currency:'EGP':'symbol'}}</p>
                 <button (click)="removeItem(i)" class="btn remove"><i class="bi bi-trash3"></i>Remove</button>
             </div>
           
@@ -25,7 +25,7 @@
         </div>
         <hr>
  
-         <button class="btn btn-primary buy" (click)="orderNow()">Buy Now</button>
+         <button class="btn btn-primary buy" (click)="orderNow()">Buy Now </button>
         
         
       
