--- a/src/app/Component/categories/categories.component.html
+++ b/src/app/Component/categories/categories.component.html
@@ -65,7 +65,7 @@
             <div class="card-body">
               <h5 class="card-title">{{ product.title }}</h5>
               <p class="card-text">{{ product.description }}</p>
-              <p class="card-text">Price: {{ product.price }}</p>
+              <p class="card-text">Price : {{ product.price | currency:'EGP':'symbol' }}</p>
 
               <button class="btn btn-outline-success  btn-details" [routerLink]="['/products', product._id]">
                 <i class="bi bi-eye-fill"></i>
