--- a/src/app/Component/add-product/add-product.component.html
+++ b/src/app/Component/add-product/add-product.component.html
@@ -6,19 +6,22 @@
     <div class="col-md-6">
       <form class="row g-3 border rounded p-4 shadow-sm" (ngSubmit)="confirmAddProduct(addForm)" #addForm="ngForm" enctype="multipart/form-data">
         <div class="col-12">
+          <div class="text-center mb-3">
+            <img [src]="image" class="rounded-circle img-thumbnail" alt="Product Image" style="width: 150px; height: 150px;">
+          <input type="file" class="form-control" id="image" name="image" (change)="onFileSelected($event)" ngModel #image="ngModel" required accept="image/*">
+          <div class="form-text" *ngIf="!image.valid && (image.touched || image.dirty)">
+            Please provide a valid image (.jpg, .jpeg, .png, .gif)
+          </div>
+        </div>
+        </div>
+        <div class="col-12">
           <label for="title" class="form-label">Product title</label>
           <input type="text" class="form-control" id="title" ngModel name="title" #title="ngModel" required>
           <div class="form-text" *ngIf="!title.valid && title.touched">
             Please provide a valid title for the product
           </div>
         </div>
-        <div class="col-12">
-          <label for="image" class="form-label">Choose image</label>
-          <input type="file" class="form-control" id="image" name="image" (change)="onFileSelected($event)" ngModel #image="ngModel" required accept="image/*">
-          <div class="form-text" *ngIf="!image.valid && (image.touched || image.dirty)">
-            Please provide a valid image (.jpg, .jpeg, .png, .gif)
-          </div>
-        </div>
+
         <div class="col-md-6">
           <label for="quantity" class="form-label">Quantity</label>
           <input type="number" min="1" max="5000" class="form-control" id="quantity" ngModel name="quantity" #quantity="ngModel" required>
@@ -64,7 +67,7 @@
           </div>
           <div class="color-circles">
             <span *ngFor="let chosenColor of chosenColors" class="color-circle" [style.background-color]="chosenColor" (mouseenter)="showRemoveIcon(chosenColor)" (mouseleave)="hideRemoveIcon(chosenColor)">
-              <span class="remove-icon" (click)="confirmRemoveColor(chosenColor)">&#10006;</span>
+              <span class="remove-icon" (click)="confirmRemoveColor(chosenColor)"></span>
             </span>
           </div>
         </div>
