--- a/src/app/Component/Cart/cart/cart.component.html
+++ b/src/app/Component/Cart/cart/cart.component.html
@@ -1,21 +1,22 @@
-<ng-container *ngIf=" cartProducts.length > 0">
-    <div class="container d-flex justify-content-center align-items-center" >
+<!-- [dir]="'dir' | translate" -->
+<ng-container *ngIf=" cartProducts.length > 0" >
+    <div class="container d-flex justify-content-center align-items-center" [dir]="'dir' | translate">
         <div class="card ">
-            <h5 class="card-title">Shop Cart</h5>
-            <p class="card-price">Total Price : {{ getTotalPrice() | currency:'EGP':'symbol' }} </p>
-            <button class="btn btn-danger clear"  (click)="Clear()">Clear Cart</button>
+            <h5 class="card-title" >{{ 'cart.card-title' | translate }}</h5>
+            <p class="card-price">{{ 'cart.card-price' | translate }} {{ getTotalPrice() | currency:'EGP':'symbol' }} </p>
+            <button class="btn btn-danger clear"  (click)="clearCart()">{{ 'cart.clear' | translate }}</button>
         <div class="mt-4 card-item " *ngFor="let item of cartProducts; let i = index">
             <div class=" card_img"><img [src]="getImageUrl(item.product.image)" [alt]="item.product.title"></div>
             
              <div class="card-text">
                 <h4>{{item.product.title}}</h4>
                 <p>{{item.product.price | currency:'EGP':'symbol'}}</p>
-                <button (click)="removeItem(i)" class="btn remove"><i class="bi bi-trash3"></i>Remove</button>
+                <button (click)="removeItem(i)" class="btn remove"><i class="bi bi-trash3"></i>{{ 'cart.remove-btn' | translate }}</button>
             </div>
           
             <div   class="quantity">
                 <button class="btn btn-outline-success" (click)="increaseQuantity(item)">+</button>
-                <span>{{ item.quantity }}</span>
+                <span> {{ item.quantity }}</span>
                 <button class="btn btn-outline-success" (click)="decreaseQuantity(item)">-</button>
             </div>
             
@@ -48,7 +49,6 @@
     </div>
     </div>
 </ng-container>
-
 
 
 <app-footer></app-footer>
