--- a/src/app/Component/categories/categories.component.html
+++ b/src/app/Component/categories/categories.component.html
@@ -63,7 +63,7 @@
               <img class="card-img-top product-image" [src]="getImageUrl(product.image)" [alt]="product.title">
             </div>
             <div class="card-body">
-              <h5 class="card-title">{{ product.title }}</h5>
+              <h5 class="card-title">{{ product.title | translate }}</h5>
               <p class="card-text">{{ product.description }}</p>
               <p class="card-text">Price : {{ product.price | currency:'EGP':'symbol' }}</p>
 
