--- a/src/app/Component/header/header.component.html
+++ b/src/app/Component/header/header.component.html
@@ -49,7 +49,7 @@
         <i style="font-size: 30px;" class="bi bi-cart-plus"></i>
         <span class="badge bg-danger" style="font-size: 10px;">{{cartlength}}</span>
       </button>
-
+      <a class="nav-link lang" (click)= "changeLanguage()"> {{lang == "en" ? "عربى" :"English"}}  </a>
     </div>
   </div>
 </nav>
