--- a/src/app/Component/admin-dashboard/product/product.component.css
+++ b/src/app/Component/admin-dashboard/product/product.component.css
@@ -1,80 +1,53 @@
-/* .product-container {
-  display: inline-block;
-  width: calc(100% / 3);
-}
 
-.product-card {
-  background: white;
-  padding: 20px;
-  border-radius: 20px;
-  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.3);
-  margin-bottom: 30px;
-}
-.add-product-btn {
-  width: 100%; /* Ensure it takes the full width of its container
-  padding: 10px 20px; Adjust padding as needed
-  margin-bottom: 20px; Add a margin for spacing 
-  text-align: center; Center the text within the button */
-  /* ... other button styles as you prefer
-}
-
-.product-card img {
-  width: 100%;
-  border-radius: 10px;
-}
-
-.product-card h3 {
-  font-weight: bold;
-  color: #127103;
+.action-details {
   margin-top: 10px;
 }
 
-.product-card p {
-  color: #127103;
-  margin-top: 5px;
+.action-details p {
+  margin-bottom: 5px;
+  font-size: 14px;
+}
+.image-container {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  overflow: hidden;
 }
 
-.product-card p:last-child {
-  margin-bottom: 10px;
+.image-container img {
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 .action-buttons {
-  margin-top: 10px;
+  display: flex;
+  gap: 8px;
 }
 
-.action-buttons button {
-  margin-right: 10px;
-  background-color: #127103;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  padding: 8px 16px;
-  font-size: 14px;
-  cursor: pointer;
-  transition: background-color 0.3s;
+/* Adjustments for smaller screens */
+@media screen and (max-width: 768px) {
+  .image-container {
+    width: 60px;
+    height: 60px;
+  }
 }
-
-.action-buttons button:hover {
-  background-color: #0e5a02;
+.form-select {
+  width: 80%;
+  font-size: 1.2rem;
 }
-
-.action-buttons button:focus {
-  outline: none;
-}
-
-.product-list {
-  justify-content: space-around;
-} */
-
-
 
 .demo{ font-family: 'Noto Sans', sans-serif; }
 .container
 {
   margin-top: 82px;
 }
+.bg-primary {
+  --bs-bg-opacity: 1;
+  background-color: #198754 !important;
+}
 .panel{
-    background: linear-gradient(to right, #2980b9, #2c3e50);
+    background: linear-gradient(to right, #198754, #198754);
     padding: 0;
     border-radius: 10px;
     border: none;
