--- a/src/app/Component/edit-product/edit-product.component.html
+++ b/src/app/Component/edit-product/edit-product.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="mb-4">
-          <h2>Add New Product</h2>
+          <h2>Edit Product</h2>
         </div>
         <div class="col-md-6">
           <form class="row g-3 border rounded p-4 shadow-sm" [formGroup]="editProductForm" (ngSubmit)="confirmEditProduct()" enctype="multipart/form-data">
