--- a/src/app/Component/admin-dashboard/admin-board/admin-board.component.html
+++ b/src/app/Component/admin-dashboard/admin-board/admin-board.component.html
@@ -60,12 +60,12 @@
         <i class="fa fa-strikethrough" aria-hidden="true"></i>
         <span style="font-size: larger;">Admin</span>
       </div>
-      <div class="search">
+      <!-- <div class="search">
         <label>
           <input type="text" placeholder="Search here">
           <i class="fa fa-search" aria-hidden="true"></i>
         </label>
-      </div>
+      </div> -->
 
       <div class="user">
         <img src="assets\project images\person1.png" alt="">
