update admin dashboard

--- a/src/app/Component/admin-dashboard/Orders/content.component.html
+++ b/src/app/Component/admin-dashboard/Orders/content.component.html
@@ -61,7 +61,7 @@
 
            <div class="deleteContainer" >
             <span class="deletBtn">
-              <button class="btn btn-danger" (click)="OpenDialog(user._id)">
+              <button class="btn btn-danger" (click)="OpenDialog(user._id)" title="Remove Customer">
                 <i class="bi bi-trash-fill"></i>
               </button>
             </span>
