--- a/src/app/Component/admin-dashboard/Orders/content.component.css
+++ b/src/app/Component/admin-dashboard/Orders/content.component.css
@@ -29,7 +29,7 @@
 
 .cardHeader h2 {
   font-weight: 600;
-  color: #127103;
+  color: #198754;
   margin: 0;
 }
 
@@ -59,7 +59,7 @@ tbody tr:last-child {
 }
 
 tbody tr:hover {
-  background: #127103;
+  background: #198754;
   color: white;
 }
 
@@ -145,7 +145,13 @@ tbody tr td:nth-child(3) {
   transform: translateY(-50%);
 
 }
+.userDiv:hover {
+  background-color: #198754;
+  color:aliceblue;
+  border-radius: 10px;
 
+}
 .userDiv:hover .deleteContainer{
   display: block;
+
 }
