--- a/src/app/Component/admin-dashboard/admin-board/admin-board.component.html
+++ b/src/app/Component/admin-dashboard/admin-board/admin-board.component.html
@@ -54,8 +54,8 @@
   <mat-sidenav-content>
     <mat-toolbar color="basic">
       <div fxLayoutAlign=" center">
-        <button mat-icon-button (click)="sidenav.toggle()">
-          <mat-icon>menu</mat-icon>
+        <button mat-icon-button (click)="sidenav.toggle()" class="bi bi-house">
+          <!-- <mat-icon>menu</mat-icon> -->
         </button>
         <i class="fa fa-strikethrough" aria-hidden="true"></i>
         <span style="font-size: larger;">Admin</span>
