--- a/src/app/Component/contact-us/contact-us.component.html
+++ b/src/app/Component/contact-us/contact-us.component.html
@@ -1,20 +1,20 @@
-<div class="container">
+<div class="container" [dir]="'dir' | translate">
     <h2 class="contact">{{ 'Contact.Contact' | translate }}</h2>
     <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" class="contact-form">
       <div class="form-group">
-        <label for="name">Name:</label>
+        <label for="name">{{ 'Contact.name' | translate }}</label>
         <input type="text" id="name" formControlName="name" class="form-control">
       </div>
       <div class="form-group">
-        <label for="email">Email:</label>
+        <label for="email">{{ 'Contact.email' | translate }}</label>
         <input type="email" id="email" formControlName="email" class="form-control">
       </div>
       <div class="form-group">
-        <label for="message">Message:</label>
+        <label for="message">{{ 'Contact.message' | translate }}</label>
         <textarea id="message" formControlName="message" class="form-control"></textarea>
       </div>
       <div class="form-group">
-        <button type="submit" [disabled]="contactForm.invalid" class="btn btn-success">Submit</button>
+        <button type="submit" [disabled]="contactForm.invalid" class="btn btn-success">{{ 'Contact.submit' | translate }}</button>
       </div>
     </form>
   </div>
