--- a/src/app/Component/search/search.component.html
+++ b/src/app/Component/search/search.component.html
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <div class="d-flex">
       <input class="form-control me-2" type="text" [(ngModel)]="searchTerm" (input)="onSearchChange()">
-      <button class="btn btn-outline-success" (click)="onSearchChange()">Search</button>
+      <button class="btn btn-outline-success" (click)="onSearchChange()">{{'category.Search'| translate }}</button>
     </div>
   </div>
 </div>
